[gd_scene load_steps=2 format=3 uid="uid://bkxq8n7xvh2iy"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_main_script"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "BREASTPLATE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter IP Address (127.0.0.1)"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status: Not Connected"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
